Add db script Add db context Add publish settings

--- a/src/HitFit.Api/appsettings.json
+++ b/src/HitFit.Api/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "DataAccessPostgreSqlProvider": {
+    "ConnectionString": "User ID=postgres;Password=Tsunami9;Host=localhost;Port=5432;Database=hitfit.db;Pooling=true;"
   }
 }
