--- a/src/HitFit.Api/project.json
+++ b/src/HitFit.Api/project.json
@@ -16,8 +16,7 @@
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.NETCore.App": "1.0.0",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
-    "Npgsql.EntityFrameworkCore.PostgreSQL.Design": "1.0.1"
-  },
+    "Npgsql.EntityFrameworkCore.PostgreSQL.Design": "1.0.1"  },
 
   "tools": {
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
