Add user service and authentication service

--- a/src/HitFit.App/hitfit.app.csproj
+++ b/src/HitFit.App/hitfit.app.csproj
@@ -6,10 +6,18 @@
 
   <ItemGroup>
     <Content Include="wwwroot\app\app.component.ts" />
+    <Content Include="wwwroot\app\app.js" />
+    <Content Include="wwwroot\app\app.js.map" />
     <Content Include="wwwroot\app\app.module.ts" />
+    <Content Include="wwwroot\app\app.ts" />
     <Content Include="wwwroot\app\main.ts" />
     <Content Include="wwwroot\app\person.service.ts" />
+    <Content Include="wwwroot\app\services\person.service.js" />
+    <Content Include="wwwroot\app\services\person.service.js.map" />
+    <Content Include="wwwroot\app\services\person.service.ts" />
+    <Content Include="wwwroot\css\site.css" />
     <Content Include="wwwroot\index.html" />
+    <Content Include="wwwroot\models\user.ts" />
   </ItemGroup>
 
   <ItemGroup>
