UI style changes. Add validation on login page.

--- a/src/hitfit.app/hitfit.app.csproj
+++ b/src/hitfit.app/hitfit.app.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Properties\PublishProfiles\hitfitapp - Web Deploy.pubxml" />
     <None Remove="ScaffoldingReadMe.txt" />
   </ItemGroup>
 
@@ -41,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
 </Project>
