Add article service, controller, views etc

--- a/src/hitfit.app/hitfit.app.csproj
+++ b/src/hitfit.app/hitfit.app.csproj
@@ -16,8 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\css\droparea.css" />
     <Content Include="wwwroot\css\login.css" />
     <Content Include="wwwroot\css\login.scss" />
+    <Content Include="wwwroot\js\droparea.js" />
     <Content Include="wwwroot\js\login.js" />
   </ItemGroup>
   <ItemGroup>
