Clear app project. Change architecture to Controller-Service-Manager. Add user roles support. Add columns mapping.

--- a/src/hitfit.app/appsettings.json
+++ b/src/hitfit.app/appsettings.json
@@ -13,5 +13,9 @@
     "ValidIssuer": "TestIssuer",
     "ValidAudience": "TestAudience"
   },
-  "ImageService": "DiskStorage" //"BlobStorage" 
+  "ImageService": "DiskStorage", //"BlobStorage" ,
+  "installed": {
+    "client_id": "703137161297-kcdmjcjk5caa9ampgvraqa4ktt5nsqit.apps.googleusercontent.com",
+    "client_secret": "2XXbusAQkVUsY7MvoxXQRlIi"
+  }
 }
