--- a/src/hitfit.app/hitfit.app.csproj
+++ b/src/hitfit.app/hitfit.app.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Core" Version="1.28.0" />
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.28.0.946" />
     <PackageReference Include="Google.Apis.Plus.v1" Version="1.28.0.928" />
     <PackageReference Include="HtmlAgilityPack" Version="1.5.1" />
