Add application insights. Implement BlobStorage image service.

--- a/src/hitfit.app/appsettings.json
+++ b/src/hitfit.app/appsettings.json
@@ -1,7 +1,4 @@
-﻿{
-  "ConnectionStrings": {
-    "NpgsqlConnection": "User ID=postgres;Password=Tsunami9;Host=localhost;Port=5432;Database=hitfitdb;Pooling=true;"
-  },
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -13,9 +10,12 @@
     "ValidIssuer": "TestIssuer",
     "ValidAudience": "TestAudience"
   },
-  "ImageService": "DiskStorage", //"BlobStorage" ,
+  "ImageService": "BlobStorage",
   "installed": {
     "client_id": "703137161297-kcdmjcjk5caa9ampgvraqa4ktt5nsqit.apps.googleusercontent.com",
     "client_secret": "2XXbusAQkVUsY7MvoxXQRlIi"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "ba261bb1-7be3-4cbe-85ff-fde7bc6d36a2" //dydblpyb8djgiljyrg4pvfgq4iu3teg1lqnpu364
   }
 }
