--- a/src/hitfit.app/appsettings.Development.json
+++ b/src/hitfit.app/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "NpgsqlConnection": "User ID=postgres;Password=Tsunami9;Host=localhost;Port=5432;Database=hitfitdb;Pooling=true;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
