--- a/src/hitfit.app/appsettings.Development.json
+++ b/src/hitfit.app/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "NpgsqlConnection": "User ID=postgres;Password=Tsunami9;Host=localhost;Port=5432;Database=hitfitdb;Pooling=true;"
+    "NpgsqlConnection": ""
   },
   "Logging": {
     "IncludeScopes": false,
