--- a/src/hitfit.app/appsettings.Local.json
+++ b/src/hitfit.app/appsettings.Local.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "NpgsqlConnection": "User ID=postgres;Password=Tsunami9;Host=localhost;Port=5432;Database=hitfitdb;Pooling=true;"
+    "NpgsqlConnection": ""
   }
 }
