--- a/src/hitfit.app/appsettings.Production.json
+++ b/src/hitfit.app/appsettings.Production.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "NpgsqlConnection": "Server=hitfitdbserver.postgres.database.azure.com;Database=hitfitdb;Port=5432;User Id=postgres@hitfitdbserver;Password=Tsunami9;"
+    "NpgsqlConnection": ""
   }
 }
